--- a/styles/PotCard.module.css
+++ b/styles/PotCard.module.css
@@ -16,7 +16,7 @@
 .title {
   font-size: 2rem;
   font-weight: bolder;
-  color: #fff;
+  color: #f1eeff;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -24,7 +24,7 @@
 .pot {
   font-size: 1.5rem;
   font-weight: bolder;
-  color: #fff;
+  color: #f1eeff;
   text-align: center;
   flex: 1;
 }
@@ -32,7 +32,7 @@
 .potAmount {
   font-size: 1.5rem;
   font-weight: bolder;
-  color: #fff;
+  color: #f1eeff;
   text-align: center;
 }
 
@@ -46,7 +46,7 @@
   display: flex;
   justify-content: center;
   place-self: center;
-  color: #f45358;
+  color: #ff4080;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -55,13 +55,13 @@
   border-radius: 1.5rem;
   font-weight: bolder;
   font-size: 1.5rem;
-  border: 1px solid #f45358;
+  border: 1px solid #ff4080;
 }
 
 .recentWinnerTitle {
   font-size: 1.5rem;
   font-weight: bolder;
-  color: #fff;
+  color: #f1eeff;
   text-align: center;
   margin-top: 20px;
 }
@@ -69,13 +69,13 @@
 .winner {
   font-size: 1.5rem;
   font-weight: bolder;
-  color: #fff;
+  color: #f1eeff;
   text-align: center;
-  color: #f45358;
+  color: #ff4080;
 }
 
 .textAccent {
-  color: #f45358;
+  color: #ff4080;
 }
 
 .drawWinnerBtn {
@@ -85,11 +85,11 @@
   justify-content: center;
   margin: 0 auto;
   width: 20%;
-  border: 1px solid #f2505e;
+  border: 1px solid #ff4080;
   border-radius: 1.2rem;
   padding: 10px 20px;
   font-size: 1.3rem;
   font-weight: bolder;
   cursor: pointer;
-  color: #f2505e;
+  color: #ff4080;
 }
