--- a/styles/TableRow.module.css
+++ b/styles/TableRow.module.css
@@ -15,7 +15,7 @@
 }
 
 .address {
-  color: #fff;
+  color: #f1eeff;
   font-size: 18px;
   font-weight: 500;
   line-height: 1.2;
@@ -23,7 +23,7 @@
 }
 
 .ethAmount {
-  color: #fff;
+  color: #f1eeff;
   font-size: 18px;
   font-weight: 500;
   line-height: 1.2;
