--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -18,7 +18,7 @@
   font-size: 2rem;
   cursor: pointer;
   font-weight: bolder;
-  color: #f2505e;
+  color: #ff4080;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,7 +32,7 @@
   background-color: #3e4754;
   border-radius: 1.5rem;
   padding: 10px;
-  color: #f0f4fa;
+  color: #ff4080;
   font-weight: bolder;
 }
 
@@ -42,6 +42,6 @@
 }
 
 .accentColor {
-  color: #f2505e;
+  color: #ff4080;
   font-weight: bold;
 }
