--- a/styles/Table.module.css
+++ b/styles/Table.module.css
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100px;
   background-color: #383c47;
-  color: #f1f1f3;
+  color: #ff4080;
   display: flex;
   align-items: flex-end;
   padding: 10px;
@@ -41,19 +41,19 @@
 .amountTitle {
   font-size: 1.3rem;
   font-weight: bolder;
-  color: #f2505e;
+  color: #ff4080;
 }
 
 .addressTitle {
   font-size: 1.3rem;
   font-weight: bolder;
-  color: #f2505e;
+  color: #ff4080;
 }
 
 .noPlayers {
   font-size: 1.3rem;
   font-weight: bolder;
-  color: #f2505e;
+  color: #ff4080;
   display: flex;
   align-items: center;
   justify-content: center;
