--- a/styles/Table.module.css
+++ b/styles/Table.module.css
@@ -14,6 +14,16 @@
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  animation: ani 3s forwards;
+}
+@keyframes ani {
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .tableHeader {
