--- a/styles/PotCard.module.css
+++ b/styles/PotCard.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   background-color: #242833;
   min-height: 200px;
+  min-width: 400px;
   width: 50%;
   margin: 0 auto;
   border-radius: 2rem;
@@ -21,6 +22,12 @@
   100% {
     opacity: 1;
   }
+}
+
+.enter {
+  font-size: 14px;
+  padding-top: 30px;
+  margin-left: -57px;
 }
 
 .title {
