--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.cdnfonts.com/css/neon-80s");
+
 .wrapper {
   background-color: #383c47;
   width: 100%;
   min-height: 50px;
+  max-height: 80px;
   color: #f1f1f3;
   display: flex;
   align-items: center;
@@ -11,6 +14,14 @@
   top: 0;
   left: 0;
   border-bottom: 1px solid white;
+}
+
+.neon {
+  font-family: "Neon 80s", sans-serif;
+  font-size: 2rem;
+  color: #ffedff;
+  padding: 10px;
+  filter: url(#stroke) url(#inner-glow) url(#outer-glow) url(#outer-glow1);
 }
 
 .title {
