--- a/styles/PotCard.module.css
+++ b/styles/PotCard.module.css
@@ -16,6 +16,7 @@
   color: #ff4080;
   background-color: #242833;
   padding: 1rem 5rem 1rem 5rem;
+  max-height: 60px;
   border-radius: 1.5rem;
   border: 4px solid #ff4080;
   font-size: 1.5rem;
@@ -93,7 +94,7 @@
   animation: fly-down 3s linear infinite;
   animation-delay: 2.5s;
 }
-.voltage-button .dots .dot5 {
+.voltagebutton .dots .dot5 {
   bottom: 0;
   left: 65%;
   animation: fly-down 3s linear infinite;
