--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -8,7 +8,7 @@
   color: #f1f1f3;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 10px 20px 10px 10px;
   justify-content: space-between;
   position: sticky;
   top: 0;
