--- a/styles/PotCard.module.css
+++ b/styles/PotCard.module.css
@@ -15,8 +15,10 @@
 .voltagebutton button {
   color: #ff4080;
   background-color: #242833;
-  padding: 1rem 5rem 1rem 5rem;
+  padding: 17px;
   max-height: 60px;
+  max-width: 250px;
+  min-width: 250px;
   border-radius: 1.5rem;
   border: 4px solid #ff4080;
   font-size: 1.5rem;
